<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="camera_permission_dialog_title">Camera permission required</string>
    <string name="camera_permission_dialog_message">
        The app needs permission to access the camera to function. Please provide the required permission via Settings in order to use this app.
    </string>
    <string name="audio_permission_dialog_title">Audio permission required</string>
    <string name="audio_permission_dialog_message">The app needs permission to access the microphone to record a video that contains audio. Please provide the required permission via Settings in order to proceed with this configuration. If you do not require your video to contain audio, you could just disable it (and enable it back later in the settings).</string>
    <string name="location_permission_dialog_title">Location permission required</string>
    <string name="location_permission_dialog_message">
        The app needs location permission for geo-tagging. Please provide the required permission via Settings in order to use this app.
    </string>
    <string name="flip_camera">Flip Camera</string>
    <string name="loading_camera">Loading camera</string>
    <string name="flash_mode">Flash Mode</string>
    <string name="start_value_timer">00:00</string>
    <string name="zoom">Zoom</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="geo_tagging">Geo-tagging</string>
    <string name="torch">Torch</string>
    <string name="scan_result">Scan Result</string>
    <string name="share_qr_text">Share QR Text</string>
    <string name="open_with">Open with</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="retake">Retake</string>
    <string name="capture">Capture</string>
    <string name="confirm">Confirm</string>
    <string name="open_gallery">Open gallery</string>
    <string name="pause_recording">Pause recording</string>
    <string name="resume_recording">Resume recording</string>
    <string name="start_recording">Start recording</string>
    <string name="stop_recording">Stop recording</string>
    <string name="turn_torch_on">Turn torch on</string>
    <string name="turn_torch_off">Turn torch off</string>
    <string name="mute_audio">Mute audio</string>
    <string name="unmute_audio">Unmute audio</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="flash_auto">Flash auto</string>
    <string name="grid_off">Grid off</string>
    <string name="grid_3x3">Grid 3 by 3</string>
    <string name="grid_4x4">Grid 4 by 4</string>
    <string name="grid_golden_ratio">Grid golden ratio</string>
    <string name="scan_all_formats">Scan all barcode formats</string>
    <string name="stop_scanning_all_formats">Stop scanning all barcode formats</string>
    <string name="play_preview">Play Preview</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="include_audio">Include Audio</string>
    <string name="enable_eis">Enable EIS</string>
    <string name="video_quality">Video Quality</string>
    <string name="optimize_for">Optimize for</string>
    <string name="quality">Quality</string>
    <string name="latency">Latency</string>
    <string name="preview">Preview</string>
    <string name="play_video">Play video</string>
    <string name="file_info">File Info</string>
    <string name="delete_file">Delete file</string>
    <string name="edit">Edit</string>
    <string name="self_illumination">Self Illumination</string>
    <string name="focus_timeout">Focus Timeout</string>
    <string name="timer">Timer</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="video_capture_label">Record Video</string>
    <string name="camera">CAMERA</string>
    <string name="video">VIDEO</string>
    <string name="portrait_mode">PORTRAIT</string>
    <string name="hdr_mode">HDR</string>
    <string name="night_mode">NIGHT</string>
    <string name="face_retouch_mode">FACE RETOUCH</string>
    <string name="auto_mode">AUTO</string>
    <string name="qr_scan_mode">QR SCAN</string>
    <string name="aspect_ratio_16_9">16:9</string>
    <string name="aspect_ratio_4_3">4:3</string>
    <string name="share_media">Share Media</string>
    <string name="edit_with">Edit with</string>
    <string name="rec_without_audio">Start recording without audio</string>
    <string name="qr_scan">QR Code</string>
    <string name="data_matrix">Data Matrix</string>
    <string name="aztec_code">Aztec Code</string>
    <string name="more_options">More Options</string>
    <string name="pdf_417">PDF 417</string>
    <string name="more_settings">More Settings</string>
    <string name="general">General</string>
    <string name="save_image_as_previewed">Save image as previewed</string>
    <string name="save_as_image_preview_desc">Save output image as visible on preview (fixes inversion in front camera)</string>
    <string name="save_video_as_previewed">Save video as previewed</string>
    <string name="save_as_video_preview_desc">Save output video as visible on preview (fixes inversion in front camera)</string>
    <string name="gyroscope_suggestions">Gyroscope Suggestions</string>
    <string name="gyroscope_setting_desc">Occasionally get visual suggestions for straight/well-angled images</string>
    <string name="camera_sounds">Camera Sounds</string>
    <string name="camera_sounds_desc">Shutter sound and other audio cues</string>
    <string name="storage">Storage</string>
    <string name="storage_location">Storage Location</string>
    <string name="revert_back_to_dcim">Revert back to DCIM</string>
    <string name="image_quality">Image Quality</string>
    <string name="image_quality_desc" formatted="false">Adjust the quality of an image captured by the app from 1% to 100%.</string>
    <string name="photo">Photo</string>
    <string name="remove_exif_title">Remove EXIF data after capture</string>
    <string name="remove_exif_subtitle">Note: Geo-tagging/Location option is independent of this setting</string>
    <string name="video_setting_title">Video</string>
    <string name="degree_format">%d°</string>
    <string name="percent_symbol">%</string>
    <string name="location_is_disabled">Location is disabled</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disable_audio">Disable Audio</string>
    <string name="copied_text_to_clipboard">Copied text to clipboard</string>
    <string name="share_text_via">Share text via</string>
    <string name="unable_to_obtain_file_details">Unable to obtain file details</string>
    <string name="no_editor_app_error">You may not have a proper app for editing this content</string>
    <string name="edit_not_allowed">Editing images in secure mode is not allowed.</string>
    <string name="sharing_not_allowed">Sharing images in secure mode is not allowed.</string>
    <string name="edit_image">Edit Image</string>
    <string name="share_image">Share Image</string>
    <string name="unable_to_share_media">Unable to share this file</string>
    <string name="unable_to_edit_media">Unable to edit this file</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Are you sure?</string>
    <string name="deleted_successfully">File deleted successfully</string>
    <string name="deleting_unexpected_error">An unexpected error occurred while deleting this file</string>
    <string name="delete_description">"Do you really want to delete this file (%s)?"</string>
    <string name="cancel">Cancel</string>
    <string name="no_image">Please capture a photo/video before trying to view them.</string>
    <string name="empty_gallery">Captured photos/videos not found</string>
    <string name="bind_failure">Failed to open camera due to an OS or hardware issue. Try rebooting.</string>
    <string name="extension_mode_unavailable">This mode is unavailable on this device.</string>
    <string name="quality_unsupported">%1$s isn\'t supported on this camera. Recording at a different quality.</string>
    <string name="camera_provider_init_failure">Failed to load camera provider due to OS or hardware issue. Try rebooting.</string>
    <string name="extensions_manager_init_failure">Failed to load extensions manager due to OS or hardware issue. Extensions modes are unavailable. Try rebooting.</string>
    <string name="unsupported_taking_picture_while_recording">Your device doesn\'t support taking pictures while recording video with the current settings.</string>
    <string name="location_unavailable">Couldn\'t attach location to image/video since it\'s  currently unavailable</string>
    <string name="existing_no_image">No image found. Exiting in-app gallery.</string>
    <string name="no_barcode_selected">Please ensure that at least one barcode is selected in manual mode</string>
    <string name="flash_unavailable_in_selected_mode">Flash is unavailable for the current mode.</string>
    <string name="front_camera_unavailable">Could not detect front camera. Please try again later!</string>
    <string name="rear_camera_unavailable">Could not detect rear camera. Please try again later!</string>
    <string name="qr_rear_camera_unavailable">The rear camera seems to be unavailable. Using front camera for QR mode instead.</string>
    <string name="folder_not_found">Storage location not found</string>
    <string name="reverting_to_default_folder">Reverting back to default DCIM directory since the custom storage location that was previously selected seems to have been deleted. Please change the storage location to another folder (if required).</string>
    <string name="more_settings_unavailable_during_recording">Cannot switch activities when recording</string>
    <string name="toggle_geo_tagging_unsupported_while_recording">Can\'t toggle geo-tagging for ongoing recording</string>
    <string name="flash_switch_unsupported">Cannot switch flash mode in this mode</string>
    <string name="four_by_three_unsupported_in_video">4:3 is not supported in video mode</string>
    <string name="flash_unavailable_in_current_mode">Flash/Torch is unavailable for this mode</string>
    <string name="unexpected_error_while_setting_focus_timeout">An unexpected error occurred while setting focus timeout</string>
    <string name="unexpected_error_while_setting_timer_duration">An unexpected error occurred while setting the self-timer duration</string>
    <string name="storage_location_updated">Storage location successfully updated to %s</string>
    <string name="no_directory_selected">No directory was selected by the picker</string>
    <string name="choose_storage_location">Choose storage location</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="revert_to_default_directory">Do you want to revert back to the default directory?</string>
    <string name="reverted_to_default_directory">Switched back to the default storage location</string>
    <string name="already_using_default_directory">Already using the default storage location</string>
    <string name="photo_quality_number_limit" tools:ignore="PluralsCandidate">Photo quality can only be between %1$d and %2$d</string>
    <string name="image_taken_in_this_mode_does_not_contain_extra_data">Images taken in this mode don\'t contain extra EXIF data</string>
    <string name="file_already_exists">File exists at %s</string>
    <string name="file_does_not_exist">File does not exist at %s</string>
    <string name="zsl_setting_title">Enable Zero Shutter Lag</string>
    <string name="zsl_setting_desc">Uses Zero Shutter Lag (ZSL) for faster image capture. Ignores wait for focus setting. Certain devices may have a buggy implementation for this.</string>
</resources>