<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.InAppGallery"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/edit_icon"
        android:icon="@drawable/edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete_icon"
        android:icon="@drawable/delete"
        android:title="@string/delete_file"
        app:showAsAction="always" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/info"
        android:title="@string/file_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_icon"
        android:icon="@drawable/share"
        android:title="@string/share_media"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit_with"
        app:showAsAction="never"
        android:title="@string/edit_with"
        android:enabled="true"/>
</menu>
