<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingVertical="12dp"
    android:paddingHorizontal="16dp"
    android:background="@color/white"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/scan_result"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/copy_to_clipboard"
                android:contentDescription="@string/copy_to_clipboard"/>

            <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="?selectableItemBackgroundBorderless"

                android:src="@drawable/share"
                android:contentDescription="@string/share_qr_text"/>

        </LinearLayout>
        
    </LinearLayout>

    <TextView
        android:id="@+id/scan_result_text"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:layout_width="match_parent" />
    
</LinearLayout>